syntax = "proto3";

option csharp_namespace = "TestGrpc.proto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  // Sends a larger data payload
  rpc SendData (DataRequest) returns (DataReply);
}

// The request message for SayHello.
message HelloRequest {
  string name = 1;
}

// The response message for SayHello.
message HelloReply {
  string message = 1;
}

// The request message for SendData.
message DataRequest {
  int32 id = 1;
  string payload = 2; // The data to send
  repeated string tags = 3; // A list of tags
}

// The response message for SendData.
message DataReply {
  string status = 1;
  int32 received_id = 2;
}